--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -158,7 +158,7 @@ snyk python dependencies scanning:
     - apt-get update && apt-get install -y nodejs
     - npm install -g snyk
   script:
-    - snyk auth $SNYK_TOKEN
+    - snyk auth "$SNYK_TOKEN"
     - snyk monitor --all-projects
     - snyk test
   rules:
@@ -171,7 +171,7 @@ build image:
   stage: build
   allow_failure: false
   variables:
-    IMAGE_NAME: nhl-app
+    IMAGE_NAME: app
     REGISTRY_URL: registry.koi-projects.ru/epam-diploma/
   before_script:
     - >-
