final snyk step fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,6 +144,7 @@ snyk python dependencies scanning:
   allow_failure: true
   variables:
     PIP_CACHE_DIR: $CI_PROJECT_DIR/.cache/pip
+    SNYK_TOKEN: $SNYK_TOKEN
   cache:
     paths:
       - .cache/pip
@@ -157,9 +158,10 @@ snyk python dependencies scanning:
     - curl -sL https://deb.nodesource.com/setup_lts.x | bash -
     - apt-get update && apt-get install -y nodejs
     - npm install -g snyk
+    - snyk config set api=$SNYK_TOKEN
+    - pip install -r requirements.txt
   script:
-    - snyk auth "$SNYK_TOKEN"
-    - snyk monitor --all-projects
+    - snyk monitor
     - snyk test
   rules:
     - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
